# cologne-percipitation

./: .gitignore  README.md  plot_per.py  pyproject.toml  weather_cologne.ipynb
cologne_percipitation/: plotting.py  weather_data.py
cologne_percipitation/notebooks/: weather_cologne.ipynb
